# meridian

./: .gitignore  CHANGELOG.md  MIGRATION_STATUS.md  Makefile  README.md  RELEASE_NOTES.md  STRUCTURE.md
.github/workflows/: build-sign.yml  lint.yml  trivy-scan.yml  validate-manifests.yml
cloud-security/: README.md
compliance/: nist-800-53-mapping.md
container-platform/: README.md
core-platform/: README.md
core-platform/networks/: network-catalog.yaml
core-platform/services/: service-catalog.yaml
core-platform/topology/: README.md  local-enterprise.yaml
core-platform/validation/: README.md
detection-engineering/: README.md
detection-engineering/detections/: README.md  guest-to-internal-denied.yaml
detection-engineering/reports/: README.md  guest-to-internal-access-report.md
detection-engineering/sample-events/: denied-guest-access.json
diagrams/: README.md
docs/: THREAT-MODEL.md  architecture.md  design-decisions.md  interview-positioning.md  learning-map.md  roadmap.md  threat-model.md
docs/runbooks/: README.md
gcp/: quickwit.yaml
identity-access/: README.md
incident-response/: README.md
k8s/: README.md
labs/: README.md
network-security/: README.md
onprem/: docker-compose.yml  prometheus.yml
python/meridian-core/: pyproject.toml
python/meridian-core/src/meridian_core/: __init__.py  config.py
python/meridian-core/tests/: test_config.py
scripts/: bootstrap.sh
security/: README.md
tools/meridian-detect/: Dockerfile  pyproject.toml
tools/meridian-detect/src/meridian_detect/: __init__.py  __main__.py  cli.py  config.py  validation.py
tools/meridian-detect/tests/: test_cli.py  test_config.py
(+62 files in other folders)
