[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-detect"
version = "0.1.0"
description = "Detection engineering CLI scaffolding for MERIDIAN"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
meridian-detect = "meridian_detect.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_detect"]
